--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["nodejs", "express", "server", "api", "supabase"],
+  "keywords": [
+    "nodejs",
+    "express",
+    "server",
+    "api",
+    "supabase"
+  ],
   "author": "Alex",
   "license": "MIT",
   "engines": {
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "@supabase/supabase-js": "^2.39.0"
+    "@supabase/supabase-js": "^2.39.0",
+    "dotenv": "^17.2.1",
+    "express": "^4.18.2"
   }
 }
